# neuralyzer

./: .gitignore  README.md  pyproject.toml  setup.py
Logs/LFHF/: accuracyplot_pyramid4.p  accuracyplot_pyramid5.p
deprecated/archi/: __init__.py  bricks.py  (+2 more)
diagnosis/: evaluation_bayesian_lymph_nodes.py  evaluation_dropout_lymph_nodes.py  evaluation_lymph_nodes.py  global_evaluation.py
neuralyzer/: datasets.py  utils.py
notebooks/: explo_linear.ipynb  indu_linear.ipynb  test_datasets.ipynb
prediction/: predict_classifier_lymph_nodes.py
tests/: constrained_predict_hev.py  constrained_train_hev.py  constrained_train_lenet_on_cifar10.py  dropout_hierarchical_lymphnode_prediction.py  kvar_train_constrained_lenet_cifar10.py  lenet_cifar10_disagreement.py  lenet_reload_retrain_on_cifar10.py  lenet_siamese_on_cifar10.py  no_dropout_lymphnode_prediction.py  predict_hflf.py  predict_nuclei_he_dist.py  score_constrained_lenet_cifar10.py  slide_dir_to_patches.py  slide_dir_to_train_valid_patches.py  train_classifier_on_hev.py  train_classifier_on_hflf.py  train_kcnn_constrained_swa_cifar10.py  train_kcnn_swa_cifar10.py  train_nuclei_he_dist.py  train_unconstrained_lenet_cifar10.py  train_vgg16_on_cifar10.py  unconstrained_predict_hev.py  vnet_dist_Vincent.py
training/: train_classifier_lymph_nodes.py
workflows/: bayesian_lymphnodes_full_eval.py  bnn_input_pipeline_check.py  bnn_test.py  bnn_test_data.py  bnn_test_my_own_data.py  bnn_test_my_own_data_lymphnodes.py  dropout_lymphnodes_full_eval.py  dropout_lymphnodes_full_eval_3_classes.py  lymphnodes_full_eval.py
(+205 files in other folders)
